# domain_specific_redteam

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  updates.txt
configs/: finance_benchmark.yaml
data/exports/: finance_redteam_attacks.jsonl  promptfoo_tests.yaml
data/seeds/: finance_seed_prompts.yaml
data/taxonomy/: finance_taxonomy.yaml  framework_mappings.yaml
docs/: SUPPORT_GUIDE.md
notebooks/: 01_create_expand_dataset.ipynb  02_evaluate_attacks_gemini.ipynb
providers/: gemini_rest_provider.js
scripts/: _bootstrap.py  build_benchmark.py  build_expanded_benchmark.py  expand_with_deepteam.py  export_promptfoo.py  generate_seeds.py  generate_taxonomy.py  list_gemini_models.py  run_garak_scan.py  test_gemini_key.py
src/finance_redteam/: __init__.py  builder.py  cli.py  config.py  deduplicator.py  deepteam_adapter.py  exporters.py  garak_adapter.py  local_generator.py  normalizer.py  promptfoo_exporter.py  provenance.py  schema.py  seed_prompts.py  taxonomy.py  validator.py
tests/: test_config_and_provenance.py  test_deduplicator.py  test_deepteam_adapter.py  test_exporters.py  test_garak_adapter.py  test_normalizer.py  test_schema.py  test_taxonomy.py  test_validator.py
